--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
 
 body {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -13,30 +15,20 @@ header {
     padding: 20px;
 }
 
-main {
+#gameBoard {
     width: 500px;
     height: 100px;
     margin: auto;
     position: relative;
+    display: flex;
 }
 
 img {
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
-/* .bomb {
-    width: 40px;
-    height: 40px;
-    background-image: url("assets/bomb.jpg");
-    background-size: 100%;
+.difficulty {
+    margin: auto;
+    padding: 20px;
+    justify-content: space-around;
 }
-
-.tile {
-    width: 30px;
-    height: 30px;
-    box-shadow: 2px;
-    background-color: grey;
-    border-radius: 2px;
-    border-style: outset;
-    border-width: 5px;
-} */
