--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(183, 255, 216);
 }
 
 body {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -12,12 +13,15 @@ header {
     font-size: 200%;
     text-transform: uppercase;
     text-align: center;
+    padding: 20px;
 }
 
 #gameBoard {
     position: relative;
-    top: 50px;
-    left: 100px;
+    width: 400px;
+    top:100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img {
@@ -35,4 +39,10 @@ img {
     justify-content: space-around;
     position: relative;
     text-align: center;
+    font-size: 200%;
+    padding: 10px;
+}
+
+#message button {
+    font-size: 120%;
 }
