--- a/style.css
+++ b/style.css
@@ -24,8 +24,10 @@ header {
     margin-right: auto;
 }
 
-img {
+.tile {
     border: 2px solid black;
+    width: 50px;
+    height: 50px;
 }
 
 .difficulty {
