--- a/style.css
+++ b/style.css
@@ -19,12 +19,14 @@ header {
 #gameBoard {
     position: relative;
     width: 400px;
-    top:100px;
+    top: 100px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .tile {
+    /* background-image: url("assets/tile.jpg"); */
+    background-size: 100%;
     border: 2px solid black;
     width: 50px;
     height: 50px;
@@ -47,4 +49,12 @@ header {
 
 #message button {
     font-size: 120%;
+}
+
+.flag {
+    background-image: url("assets/flag.png");
+    background-size: 100%;
+    border: 2px solid black;
+    width: 50px;
+    height: 50px;
 }
