--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 header {
@@ -36,13 +37,13 @@ header {
     margin: auto;
     justify-content: space-around;
     text-align: center;
+    align-items: center;
 }
 
 #message {
     display: none;
     justify-content: space-around;
     position: relative;
-    text-align: center;
     font-size: 200%;
     padding: 10px;
 }
@@ -54,7 +55,6 @@ header {
 .flag {
     background-image: url("assets/flag.png");
     background-size: 100%;
-    border: 2px solid black;
     width: 50px;
     height: 50px;
 }
